--- a/pages/scores.css
+++ b/pages/scores.css
@@ -7,26 +7,15 @@
     padding: 0;
     outline: 0;
     font-family: 'Roboto', sans-serif;
-    text-align: center;
+    
 }
 
-body{
-    height: 100vh;
 
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
 
 .container{
-    position: relative;
+    margin: 0;
     padding: 16px;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 50%;
-    background-color:#FAFAFA;
-    text-align: center;
+    background-color:rgb(230, 225, 225);
     border-radius: 4px;
     text-transform: uppercase;
     text-align: center;
