--- a/pages/scores.css
+++ b/pages/scores.css
@@ -10,6 +10,14 @@
     
 }
 
+.loi-scores {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 30% ;
+    padding-right: 30%;
+    text-align: justify;
+    color: red;
+}
 
 
 .container{
