Added Irish flag favicon for website tab

--- a/pages/scores.css
+++ b/pages/scores.css
@@ -18,6 +18,8 @@
     padding-right: 30%;
     text-align: justify;
     color: red;
+    margin-bottom: 66%;
+
 }
 
 /* Container is the div on scores pages that containers html for home and away teams, time and goals. */
